After confirming connection string to azure api

--- a/HololiveConcertBlazorServer/Shared/MainLayout.razor
+++ b/HololiveConcertBlazorServer/Shared/MainLayout.razor
@@ -1,5 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
+<HeadContent>
+
+</HeadContent>
+
 <PageTitle>HololiveConcertBlazorServer</PageTitle>
 
 <div class="page">
@@ -9,7 +13,8 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="https://github.com/benhwlcode/HololiveConcertApiApp/" target="_blank">Api GitHub</a>
+            <a href="https://github.com/benhwlcode/HololiveConcertBlazorApp/" target="_blank">About This App</a>
         </div>
 
         <article class="content px-4">
