--- a/HololiveConcertBlazorServer/Pages/AllPerformance.razor
+++ b/HololiveConcertBlazorServer/Pages/AllPerformance.razor
@@ -7,7 +7,7 @@
 <h1>All Performances</h1>
 
 <button class="btn btn-primary" @onclick="GoToPreviousPage">Previous Page</button>
-@currentPage
+Current Page: @currentPage
 <button class="btn btn-primary" @onclick="GoToNextPage">Next Page</button>
 
 @message
